--- a/PyAudioTagger.ipynb
+++ b/PyAudioTagger.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "212e1b9c",
+   "id": "3669d197",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:27:29.563320Z",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a13f1b7",
+   "id": "a70a6c09",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:27:55.306026Z",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04224320",
+   "id": "2e72abb5",
    "metadata": {},
    "source": [
     "Found the method of **changing MP3 metadata** in this post: <br>\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d2fa5cf0",
+   "id": "51eafbf6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:28:41.771524Z",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "441fd07b",
+   "id": "6b0b0541",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:29:23.042011Z",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e57f72f4",
+   "id": "e0a647bb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:29:39.893529Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a48f46c5",
+   "id": "a923342f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:32:39.733535Z",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9056394d",
+   "id": "4d9327c5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:38:48.653268Z",
@@ -169,9 +169,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a84cc5b7",
+   "metadata": {},
+   "source": [
+    "**Sample Arabic output of the titles**<br>\n",
+    "`['ما الخلافة الراشدة؟ | قصة الخلافة الراشدة [01]']\n",
+    "['سُنَّة الخلفاء الراشدين | قصة الخلافة الراشدة [02]']\n",
+    "['الترتيب النبوي للخلفاء | قصة الخلافة الراشدة [03]']\n",
+    "['الخلافة بين المهاجرين والأنصار | قصة الخلافة الراشدة [04]']\n",
+    "['استخلاف أبي بكر الصديق | قصة الخلافة الراشدة [05]']\n",
+    "['لماذا ارتدت العرب بعد وفاة الرسول صلى الله عليه وسلم؟ | قصة الخلافة الراشدة [06]']\n",
+    "['بعث أسامة بن زيد | قصة الخلافة الراشدة [07]']\n",
+    "['حُرُوبُ الرِّدَّةِ  | قصة الخلافة الراشدة [08]']\n",
+    "['معركة اليمامة | قصة الخلافة الراشدة [09]']`\n",
+    "\n",
+    "**Now, let's get the list of new titles**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "75322a1e",
+   "id": "a8fa8cb0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:50:28.152736Z",
@@ -254,9 +273,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "683ad670",
+   "metadata": {},
+   "source": [
+    "**Put them all in a dictionary, to make it easy for merging**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "593ffc76",
+   "id": "a0b96627",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-18T03:51:51.541845Z",
@@ -387,9 +414,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f83861d",
+   "metadata": {},
+   "source": [
+    "**Create a loop of merging**\n",
+    "\n",
+    "***Valid keys are found here***\n",
+    "`https://from-locals.com/python-mutagen-mp3-id3/`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1d605eee",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-20T17:54:42.526623Z",
+     "start_time": "2022-03-20T17:54:31.235165Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "folder = \"X:/Music/RightlyGuidedCalifate/\"\n",
+    "for file_number in range(1, 10): # the last file is #107\n",
+    "    print(src)\n",
+    "    src = f\"{folder}RGC{file_number:03d}_.mp3\"\n",
+    "    audio = EasyID3(src)\n",
+    "    audio['title'] = f\"{english_names[file_number-1]}\"\n",
+    "    audio['artist'] = u\"Dr. Ragheb ElSergany\"\n",
+    "    audio['album'] = u\"The Rightly Guided Caliphate\"\n",
+    "    audio['composer'] = u\"Dr. Mohammad Elnesr\" \n",
+    "    audio['Date'] = u\"2021-2022\" \n",
+    "    audio['genre'] = u\"Non fiction\" \n",
+    "    #audio['COVER_FRONT'] = u\"\" # Clear\n",
+    "    audio['website'] = u\"https://youtu.be/anQVP6g7UWc\" \n",
+    "    audio.save()\n",
+    "    audio = None # free memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cae869d9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-20T18:02:39.188310Z",
+     "start_time": "2022-03-20T18:02:28.324309Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "audio = EasyID3(src)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2506d636",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-20T18:03:19.138805Z",
+     "start_time": "2022-03-20T18:03:19.130811Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['performer:*', 'replaygain_*_gain'])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "audio.List.keys()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8565692e",
+   "id": "2ed14152",
    "metadata": {},
    "outputs": [],
    "source": []
