Retagging All the 112 files

--- a/PyAudioTagger.ipynb
+++ b/PyAudioTagger.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3669d197",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T03:27:29.563320Z",
-     "start_time": "2022-03-18T03:27:29.547363Z"
+     "end_time": "2022-03-31T22:18:42.659378Z",
+     "start_time": "2022-03-31T22:18:41.632170Z"
     }
    },
    "outputs": [],
@@ -24,12 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a70a6c09",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T03:27:55.306026Z",
-     "start_time": "2022-03-18T03:27:55.291063Z"
+     "end_time": "2022-03-31T22:18:43.518489Z",
+     "start_time": "2022-03-31T22:18:43.514499Z"
     }
    },
    "outputs": [],
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "51eafbf6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T03:28:41.771524Z",
-     "start_time": "2022-03-18T03:28:41.761523Z"
+     "end_time": "2022-03-31T22:18:48.757829Z",
+     "start_time": "2022-03-31T22:18:48.746859Z"
     }
    },
    "outputs": [],
@@ -64,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6b0b0541",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T03:29:23.042011Z",
-     "start_time": "2022-03-18T03:29:23.034032Z"
+     "end_time": "2022-03-31T22:18:49.997516Z",
+     "start_time": "2022-03-31T22:18:49.986545Z"
     }
    },
    "outputs": [
@@ -79,7 +79,7 @@
        "'TestFile.mp3'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,22 +90,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e0a647bb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T03:29:39.893529Z",
-     "start_time": "2022-03-18T03:29:39.883529Z"
+     "end_time": "2022-03-31T22:18:50.709347Z",
+     "start_time": "2022-03-31T22:18:50.691395Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['TestFile_1/4']"
+       "['Yamama battle']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "a923342f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T03:32:39.733535Z",
-     "start_time": "2022-03-18T03:32:39.711592Z"
+     "end_time": "2022-03-31T22:18:52.021316Z",
+     "start_time": "2022-03-31T22:18:52.015331Z"
     }
    },
    "outputs": [],
@@ -135,12 +135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "4d9327c5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T03:38:48.653268Z",
-     "start_time": "2022-03-18T03:38:48.628308Z"
+     "end_time": "2022-03-31T22:19:17.092464Z",
+     "start_time": "2022-03-31T22:19:16.815820Z"
     }
    },
    "outputs": [
@@ -148,15 +148,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ما الخلافة الراشدة؟ | قصة الخلافة الراشدة [01]']\n",
-      "['سُنَّة الخلفاء الراشدين | قصة الخلافة الراشدة [02]']\n",
-      "['الترتيب النبوي للخلفاء | قصة الخلافة الراشدة [03]']\n",
-      "['الخلافة بين المهاجرين والأنصار | قصة الخلافة الراشدة [04]']\n",
-      "['استخلاف أبي بكر الصديق | قصة الخلافة الراشدة [05]']\n",
-      "['لماذا ارتدت العرب بعد وفاة الرسول صلى الله عليه وسلم؟ | قصة الخلافة الراشدة [06]']\n",
-      "['بعث أسامة بن زيد | قصة الخلافة الراشدة [07]']\n",
-      "['حُرُوبُ الرِّدَّةِ  | قصة الخلافة الراشدة [08]']\n",
-      "['معركة اليمامة | قصة الخلافة الراشدة [09]']\n"
+      "['Rightly Guided Caliphate']\n",
+      "['Sunnah of the RGCs']\n",
+      "[\"Prophet's Order of Caliphs\"]\n",
+      "['MuhajirAnsarCaliphSelection']\n",
+      "['Abu Bakr as-Siddiq the calif']\n",
+      "['Arabs apostate reasons']\n",
+      "['Osama bin Zaid army']\n",
+      "['Wars of apostasy']\n",
+      "['Yamama battle']\n"
      ]
     }
    ],
@@ -189,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "a8fa8cb0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T03:50:28.152736Z",
-     "start_time": "2022-03-18T03:50:28.116803Z"
+     "end_time": "2022-03-31T22:53:50.295923Z",
+     "start_time": "2022-03-31T22:53:50.273983Z"
     }
    },
    "outputs": [
@@ -262,7 +262,7 @@
        "4       5  Abu Bakr as-Siddiq the calif"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,12 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "a0b96627",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T03:51:51.541845Z",
-     "start_time": "2022-03-18T03:51:51.518906Z"
+     "end_time": "2022-03-31T22:53:58.521753Z",
+     "start_time": "2022-03-31T22:53:58.505798Z"
     }
    },
    "outputs": [
@@ -400,10 +400,15 @@
        " 103: 'The story of Hercules',\n",
        " 104: 'The ProphetMessage to romans',\n",
        " 105: 'Hercules mystery',\n",
-       " 106: 'Zubair & Miracle of Babylon'}"
+       " 106: 'Zubair & Miracle of Babylon',\n",
+       " 107: 'Amr agreement w/ Egyptians',\n",
+       " 108: 'Al-Muqawqis request from Amr',\n",
+       " 109: 'Why AL-Fustat is so named?',\n",
+       " 110: 'Opening Al-Delta',\n",
+       " 111: 'In front of Alex. walls'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,19 +431,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "1d605eee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-20T17:54:42.526623Z",
-     "start_time": "2022-03-20T17:54:31.235165Z"
+     "end_time": "2022-03-31T22:57:02.387741Z",
+     "start_time": "2022-03-31T22:56:58.176028Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1>2>3>4>5>6>7>8>9>10>11>12>13>14>15>16>17>18>19>20>21>22>23>24>25>26>27>28>29>30>31>32>33>34>35>36>37>38>39>40>41>42>43>44>45>46>47>48>49>50>51>52>53>54>55>56>57>58>59>60>61>62>63>64>65>66>67>68>69>70>71>72>73>74>75>76>77>78>79>80>81>82>83>84>85>86>87>88>89>90>91>92>93>94>95>96>97>98>99>100>101>102>103>104>105>106>107>108>109>110>111>/n*Done*\n"
+     ]
+    }
+   ],
    "source": [
     "folder = \"X:/Music/RightlyGuidedCalifate/\"\n",
-    "for file_number in range(1, 10): # the last file is #107\n",
-    "    print(src)\n",
+    "for file_number in range(1, 112): # the last file is #107\n",
+    "    print(file_number,end=\">\")\n",
     "    src = f\"{folder}RGC{file_number:03d}_.mp3\"\n",
     "    audio = EasyID3(src)\n",
     "    audio['title'] = f\"{english_names[file_number-1]}\"\n",
@@ -450,22 +463,82 @@
     "    #audio['COVER_FRONT'] = u\"\" # Clear\n",
     "    audio['website'] = u\"https://youtu.be/anQVP6g7UWc\" \n",
     "    audio.save()\n",
+    "    audio = None # free memory\n",
+    "print(\"/n*Done*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cae869d9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-31T23:05:23.911714Z",
+     "start_time": "2022-03-31T23:05:23.905757Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def change_mp3_tags(folder, filename, new_title):\n",
+    "    src = f\"{folder}{filename}.mp3\"\n",
+    "    audio = EasyID3(src)\n",
+    "    audio['title'] = new_title\n",
+    "    audio['artist'] = u\"Dr. Ragheb ElSergany\"\n",
+    "    audio['album'] = u\"The Rightly Guided Caliphate\"\n",
+    "    audio['composer'] = u\"Dr. Mohammad Elnesr\" \n",
+    "    audio['Date'] = u\"2021-2022\" \n",
+    "    audio['genre'] = u\"Non fiction\" \n",
+    "    audio['website'] = u\"https://youtu.be/anQVP6g7UWc\" \n",
+    "    audio.save()\n",
     "    audio = None # free memory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "cae869d9",
+   "execution_count": 16,
+   "id": "3af125ac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-20T18:02:39.188310Z",
-     "start_time": "2022-03-20T18:02:28.324309Z"
+     "end_time": "2022-03-31T23:10:47.935241Z",
+     "start_time": "2022-03-31T23:10:47.847477Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*File # 112 (In front of Alex. walls) is Done*\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing\n",
+    "\n",
+    "folder = \"X:/Music/RightlyGuidedCalifate/\"\n",
+    "file_number=112\n",
+    "filename = f\"RGC{file_number:03d}_\"\n",
+    "new_title= f\"{english_names[file_number-1]}\"\n",
+    "\n",
+    "change_mp3_tags(folder, filename, new_title)\n",
+    "print(f\"*File # {file_number} ({new_title}) is Done*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd0e9857",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "audio = EasyID3(src)"
+    "folder = \"X:/Music/RightlyGuidedCalifate/\"\n",
+    "for file_number in range(1, 113): # the last file is #112, Add ONE to the #\n",
+    "    print(file_number,end=\">\")\n",
+    "    filename = \"RGC{file_number:03d}_\"\n",
+    "    new_title= f\"{english_names[file_number-1]}\"\n",
+    "    change_mp3_tags(folder, filename, new_title)\n",
+    "print(\"\")\n",
+    "print(\"*Done*\")"
    ]
   },
   {
@@ -490,9 +563,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "audio.List.keys()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
