Creating the folder every 7 files function

--- a/Splitter_stage_3.ipynb
+++ b/Splitter_stage_3.ipynb
@@ -239,25 +239,63 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13452c96",
+   "cell_type": "markdown",
+   "id": "2e72d2a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**I want to place each 7 files in a folder**\n",
+    "See here:\n",
+    "https://appdividend.com/2021/07/03/how-to-create-directory-if-not-exist-in-python/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "91779214",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-31T23:25:15.203680Z",
+     "start_time": "2022-03-31T23:25:15.184739Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "file_number = 4\n",
+    "\n",
+    "\n",
+    "def find_folder_name(file_number):\n",
+    "    folder_number = (file_number-1) // 7 + 1\n",
+    "    return f\"R{folder_number:02d}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "062c1c1b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-31T23:27:14.423708Z",
+     "start_time": "2022-03-31T23:27:14.415731Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 R01>>2 R01>>7 R01>>8 R02>>12 R02>>13 R02>>14 R02>>15 R03>>70 R10>>"
+     ]
+    }
+   ],
+   "source": [
+    "for i in (1, 2, 7, 8, 12, 13, 14, 15, 70):\n",
+    "    print(i, find_folder_name(i), end=\">>\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "062c1c1b",
+   "id": "3e2a8f0c",
    "metadata": {},
    "outputs": [],
    "source": []
