To create the folder if not exists

--- a/Splitter_stage_3.ipynb
+++ b/Splitter_stage_3.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "c466e248",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T02:47:17.220352Z",
-     "start_time": "2022-03-18T02:47:16.623048Z"
+     "end_time": "2022-03-31T23:34:42.112900Z",
+     "start_time": "2022-03-31T23:34:41.403257Z"
     }
    },
    "outputs": [],
@@ -240,12 +240,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e72d2a0",
+   "id": "91a2284f",
    "metadata": {},
    "source": [
-    "**I want to place each 7 files in a folder**\n",
-    "See here:\n",
-    "https://appdividend.com/2021/07/03/how-to-create-directory-if-not-exist-in-python/"
+    "**I want to place each 7 files in a folder**\n"
    ]
   },
   {
@@ -293,9 +291,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "613e53c4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-31T23:29:02.221844Z",
+     "start_time": "2022-03-31T23:29:02.202896Z"
+    }
+   },
+   "source": [
+    "**To create the folder if not exists**\n",
+    "See here:\n",
+    "\n",
+    "https://appdividend.com/2021/07/03/how-to-create-directory-if-not-exist-in-python/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e990ba2b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-31T23:38:39.687426Z",
+     "start_time": "2022-03-31T23:38:39.670472Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_output_folder(source_output, file_number):\n",
+    "    folder_name = find_folder_name(file_number)\n",
+    "    folder_path = os.path.join(source_output, folder_name)\n",
+    "    exists = os.path.exists(folder_path)\n",
+    "    if not exists:\n",
+    "        os.makedirs(folder_path)\n",
+    "    return folder_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9d771184",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-31T23:38:40.666220Z",
+     "start_time": "2022-03-31T23:38:40.655222Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 X:/Music/RightlyGuidedCalifate/Outputs/R01\n",
+      "2 X:/Music/RightlyGuidedCalifate/Outputs/R01\n",
+      "7 X:/Music/RightlyGuidedCalifate/Outputs/R01\n",
+      "8 X:/Music/RightlyGuidedCalifate/Outputs/R02\n",
+      "12 X:/Music/RightlyGuidedCalifate/Outputs/R02\n",
+      "13 X:/Music/RightlyGuidedCalifate/Outputs/R02\n",
+      "14 X:/Music/RightlyGuidedCalifate/Outputs/R02\n",
+      "15 X:/Music/RightlyGuidedCalifate/Outputs/R03\n",
+      "70 X:/Music/RightlyGuidedCalifate/Outputs/R10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in (1, 2, 7, 8, 12, 13, 14, 15, 70):\n",
+    "    print(i, get_output_folder(\"X:/Music/RightlyGuidedCalifate/Outputs/\", i))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e2a8f0c",
+   "id": "1f94130b",
    "metadata": {},
    "outputs": [],
    "source": []
