Found an error when parcing file number 10

--- a/Splitter_stage_3.ipynb
+++ b/Splitter_stage_3.ipynb
@@ -39,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "635a252f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T02:47:19.412608Z",
-     "start_time": "2022-03-18T02:47:19.406627Z"
+     "end_time": "2022-03-31T23:46:43.403745Z",
+     "start_time": "2022-03-31T23:46:43.394768Z"
     }
    },
    "outputs": [],
@@ -56,12 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "9622cc43",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T02:55:39.778348Z",
-     "start_time": "2022-03-18T02:55:39.762390Z"
+     "end_time": "2022-03-31T23:46:44.477391Z",
+     "start_time": "2022-03-31T23:46:44.457444Z"
     }
    },
    "outputs": [],
@@ -92,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "13aab901",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T02:47:21.604866Z",
-     "start_time": "2022-03-18T02:47:21.591877Z"
+     "end_time": "2022-03-31T23:46:45.889444Z",
+     "start_time": "2022-03-31T23:46:45.869523Z"
     }
    },
    "outputs": [],
@@ -127,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "f99c28aa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-18T02:56:13.141726Z",
-     "start_time": "2022-03-18T02:56:13.124773Z"
+     "end_time": "2022-03-31T23:46:47.290828Z",
+     "start_time": "2022-03-31T23:46:47.262928Z"
     }
    },
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91a2284f",
+   "id": "2e8a6ae6",
    "metadata": {},
    "source": [
     "**I want to place each 7 files in a folder**\n"
@@ -248,12 +248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "91779214",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-31T23:25:15.203680Z",
-     "start_time": "2022-03-31T23:25:15.184739Z"
+     "end_time": "2022-03-31T23:39:52.532146Z",
+     "start_time": "2022-03-31T23:39:52.526195Z"
     }
    },
    "outputs": [],
@@ -263,17 +263,17 @@
     "\n",
     "def find_folder_name(file_number):\n",
     "    folder_number = (file_number-1) // 7 + 1\n",
-    "    return f\"R{folder_number:02d}\""
+    "    return f\"Group_{folder_number:02d}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "062c1c1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-31T23:27:14.423708Z",
-     "start_time": "2022-03-31T23:27:14.415731Z"
+     "end_time": "2022-03-31T23:40:00.118710Z",
+     "start_time": "2022-03-31T23:40:00.107764Z"
     }
    },
    "outputs": [
@@ -281,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 R01>>2 R01>>7 R01>>8 R02>>12 R02>>13 R02>>14 R02>>15 R03>>70 R10>>"
+      "1 Group_01>>2 Group_01>>7 Group_01>>8 Group_02>>12 Group_02>>13 Group_02>>14 Group_02>>15 Group_03>>70 Group_10>>"
      ]
     }
    ],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "613e53c4",
+   "id": "ea58e02e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T23:29:02.221844Z",
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e990ba2b",
+   "id": "eb42341c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-31T23:38:39.687426Z",
@@ -329,12 +329,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "9d771184",
+   "execution_count": 31,
+   "id": "c3c4a4b6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-31T23:38:40.666220Z",
-     "start_time": "2022-03-31T23:38:40.655222Z"
+     "end_time": "2022-03-31T23:40:06.992083Z",
+     "start_time": "2022-03-31T23:40:06.973163Z"
     }
    },
    "outputs": [
@@ -342,15 +342,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 X:/Music/RightlyGuidedCalifate/Outputs/R01\n",
-      "2 X:/Music/RightlyGuidedCalifate/Outputs/R01\n",
-      "7 X:/Music/RightlyGuidedCalifate/Outputs/R01\n",
-      "8 X:/Music/RightlyGuidedCalifate/Outputs/R02\n",
-      "12 X:/Music/RightlyGuidedCalifate/Outputs/R02\n",
-      "13 X:/Music/RightlyGuidedCalifate/Outputs/R02\n",
-      "14 X:/Music/RightlyGuidedCalifate/Outputs/R02\n",
-      "15 X:/Music/RightlyGuidedCalifate/Outputs/R03\n",
-      "70 X:/Music/RightlyGuidedCalifate/Outputs/R10\n"
+      "1 X:/Music/RightlyGuidedCalifate/Outputs/Group_01\n",
+      "2 X:/Music/RightlyGuidedCalifate/Outputs/Group_01\n",
+      "7 X:/Music/RightlyGuidedCalifate/Outputs/Group_01\n",
+      "8 X:/Music/RightlyGuidedCalifate/Outputs/Group_02\n",
+      "12 X:/Music/RightlyGuidedCalifate/Outputs/Group_02\n",
+      "13 X:/Music/RightlyGuidedCalifate/Outputs/Group_02\n",
+      "14 X:/Music/RightlyGuidedCalifate/Outputs/Group_02\n",
+      "15 X:/Music/RightlyGuidedCalifate/Outputs/Group_03\n",
+      "70 X:/Music/RightlyGuidedCalifate/Outputs/Group_10\n"
      ]
     }
    ],
@@ -360,9 +360,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4fa9970d",
+   "metadata": {},
+   "source": [
+    "**Creating a function of splitting**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "90b5057a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-31T23:47:07.692783Z",
+     "start_time": "2022-03-31T23:46:54.763657Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. The X:/Music/RightlyGuidedCalifate\\RGC001_.mp3 file was split successfuly\n",
+      "2. The X:/Music/RightlyGuidedCalifate\\RGC002_.mp3 file was split successfuly\n",
+      "3. The X:/Music/RightlyGuidedCalifate\\RGC003_.mp3 file was split successfuly\n",
+      "4. The X:/Music/RightlyGuidedCalifate\\RGC004_.mp3 file was split successfuly\n"
+     ]
+    }
+   ],
+   "source": [
+    "split_interval, min_duration, max_duration = 180, 30, 240\n",
+    "source_folder = \"X:/Music/RightlyGuidedCalifate\"\n",
+    "output_folder = os.path.join(source_folder, \"output\")\n",
+    "for file_number in range(1, 5):\n",
+    "    src = os.path.join(source_folder, f\"RGC{file_number:03d}_.mp3\")\n",
+    "    result = os.path.join(get_output_folder(output_folder, file_number),\n",
+    "                          f\"RGC{file_number:03d}_%d.mp3\")\n",
+    "    print(file_number, end=\". \")\n",
+    "    split_audio_file(src, result, split_interval, min_duration, max_duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "54e6aa32",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-31T23:50:17.544919Z",
+     "start_time": "2022-03-31T23:49:54.797485Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5. The X:/Music/RightlyGuidedCalifate\\RGC005_.mp3 file was split successfuly\n",
+      "6. The X:/Music/RightlyGuidedCalifate\\RGC006_.mp3 file was split successfuly\n",
+      "7. The X:/Music/RightlyGuidedCalifate\\RGC007_.mp3 file was split successfuly\n",
+      "8. The X:/Music/RightlyGuidedCalifate\\RGC008_.mp3 file was split successfuly\n",
+      "9. The X:/Music/RightlyGuidedCalifate\\RGC009_.mp3 file was split successfuly\n",
+      "10. Error during split of X:/Music/RightlyGuidedCalifate\\RGC010_.mp3 file\n",
+      "11. "
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [38]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m result \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(get_output_folder(output_folder, file_number),\n\u001b[0;32m      7\u001b[0m                       \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRGC\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_number\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m03d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_%d.mp3\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(file_number, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m. \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 9\u001b[0m \u001b[43msplit_audio_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43msrc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresult\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msplit_interval\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_duration\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_duration\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [36]\u001b[0m, in \u001b[0;36msplit_audio_file\u001b[1;34m(src, result, split_interval, min_duration, max_duration)\u001b[0m\n\u001b[0;32m     34\u001b[0m bwd_arr \u001b[38;5;241m=\u001b[39m merge_small_durations(fwd_arr[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m],\n\u001b[0;32m     35\u001b[0m                                 min_duration,\n\u001b[0;32m     36\u001b[0m                                 max_duration,\n\u001b[0;32m     37\u001b[0m                                 fwd\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     38\u001b[0m \u001b[38;5;66;03m# stage 1\u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m final_stops \u001b[38;5;241m=\u001b[39m [x \u001b[38;5;28;01mfor\u001b[39;00m i, x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(dur_array[\u001b[38;5;241m1\u001b[39m:]) \u001b[38;5;28;01mif\u001b[39;00m bwd_arr[i] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# stage 2\u001b[39;00m\n\u001b[0;32m     41\u001b[0m final_stops \u001b[38;5;241m=\u001b[39m final_stops[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "Input \u001b[1;32mIn [36]\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     34\u001b[0m bwd_arr \u001b[38;5;241m=\u001b[39m merge_small_durations(fwd_arr[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m],\n\u001b[0;32m     35\u001b[0m                                 min_duration,\n\u001b[0;32m     36\u001b[0m                                 max_duration,\n\u001b[0;32m     37\u001b[0m                                 fwd\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     38\u001b[0m \u001b[38;5;66;03m# stage 1\u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m final_stops \u001b[38;5;241m=\u001b[39m [x \u001b[38;5;28;01mfor\u001b[39;00m i, x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(dur_array[\u001b[38;5;241m1\u001b[39m:]) \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mbwd_arr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# stage 2\u001b[39;00m\n\u001b[0;32m     41\u001b[0m final_stops \u001b[38;5;241m=\u001b[39m final_stops[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "split_interval, min_duration, max_duration = 180, 30, 240\n",
+    "source_folder = \"X:/Music/RightlyGuidedCalifate\"\n",
+    "output_folder = os.path.join(source_folder, \"output\")\n",
+    "for file_number in range(5, 113): #From 5 to 112\n",
+    "    src = os.path.join(source_folder, f\"RGC{file_number:03d}_.mp3\")\n",
+    "    result = os.path.join(get_output_folder(output_folder, file_number),\n",
+    "                          f\"RGC{file_number:03d}_%d.mp3\")\n",
+    "    print(file_number, end=\". \")\n",
+    "    split_audio_file(src, result, split_interval, min_duration, max_duration)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f94130b",
+   "id": "c056d7ca",
    "metadata": {},
    "outputs": [],
    "source": []
